ShopSphere - Microservices Application/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopsphere
  labels:
    app.kubernetes.io/part-of: shopsphere
    pod-security.kubernetes.io/enforce: baseline
